Used toList instead of Collectors